# credent

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml  tarpaulin.toml
.github/workflows/: ci.yml
crate/credent_auth_cli/: Cargo.toml
crate/credent_auth_cli/src/: credentials_cli_reader.rs  lib.rs
crate/credent_auth_fs/: Cargo.toml
crate/credent_auth_fs/src/: credentials_file.rs  credentials_file_loader.rs  credentials_file_storer.rs  error.rs  lib.rs
crate/credent_auth_model/: Cargo.toml
crate/credent_auth_model/src/: credentials.rs  password.rs
crate/credent_auth_model/src/password/: plain_text.rs
crate/credent_cli/: Cargo.toml
crate/credent_cli/src/: credentials_cli_reader.rs  lib.rs
crate/credent_cli_model/: Cargo.toml
crate/credent_cli_model/src/: error.rs  lib.rs
crate/credent_fs/: Cargo.toml
crate/credent_fs/src/: app_name.rs  credentials_file.rs  credentials_file_loader.rs  credentials_file_storer.rs  error.rs  lib.rs
crate/credent_fs_model/: Cargo.toml
crate/credent_fs_model/src/: error.rs  lib.rs
crate/credent_model/: Cargo.toml
crate/credent_model/src/: credentials.rs  lib.rs  password.rs  profile.rs  profiles.rs  username.rs
crate/credent_model/src/password/: base64_encoded.rs
examples/: demo.rs  demo_styles.rs  profiles.rs  simple.rs
scripts/: publish.sh
src/: colours.rs  lib.rs  logo.rs  main.rs
