[package]
name = "credent"
version = "0.1.0"
description = "Manages `~/.config/<app>/credentials`."
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[lib]
test = false
doctest = false

[dependencies]
credent_cli = { path = "crate/credent_cli" }
credent_fs = { path = "crate/credent_fs" }
credent_model = { path = "crate/credent_model" }

[dev-dependencies]
crossterm = "0.17.7"
smol = "0.3.3"

[features]
default = ["base64", "serde"]
base64 = ["credent_model/base64"]
serde = ["credent_model/serde"]

[workspace]
members = ["crate/*"]
