[package]
name = "credent"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Manages `~/.config/<app>/credentials`."
repository = "https://github.com/azriel91/credent"
documentation = "https://docs.rs/credent/"
readme = "README.md"
keywords = ["credentials", "profile"]
license = "MIT OR Apache-2.0"

[lib]
test = false
doctest = false

[dependencies]
credent_cli = { path = "crate/credent_cli" }
credent_fs = { path = "crate/credent_fs" }
credent_model = { path = "crate/credent_model" }

[dev-dependencies]
crossterm = "0.18.2"
smol = "1.2.4"

[features]
default = ["base64", "serde"]
base64 = ["credent_model/base64"]
serde = ["credent_model/serde"]

[workspace]
members = ["crate/*"]

# Suppress warning about no `main` function.
[[example]]
name = "demo_styles"
crate-type = ["staticlib"]
