[package]
name = "credent"
version = "0.3.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Manages `~/.config/<app>/credentials`."
repository = "https://github.com/azriel91/credent"
documentation = "https://docs.rs/credent/"
readme = "README.md"
keywords = ["credentials", "profile"]
license = "MIT OR Apache-2.0"

[lib]
test = false
doctest = false

[dependencies]
credent_cli = { version = "0.3.0", path = "crate/credent_cli" }
credent_fs = { version = "0.3.0", path = "crate/credent_fs" }
credent_model = { version = "0.3.0", path = "crate/credent_model" }

[dev-dependencies]
crossterm = "0.19.0"
smol = "1.2.5"
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread"] }

[features]
default = ["base64", "serde"]
base64 = ["credent_fs/base64", "credent_model/base64"]
serde = ["credent_model/serde"]
backend-smol = ["credent_cli/backend-smol"]
backend-tokio = ["credent_cli/backend-tokio"]

[workspace]
members = ["crate/*"]

# Suppress warning about no `main` function.
[[example]]
name = "demo_styles"
crate-type = ["staticlib"]
