[package]
name = "credent_auth_fs"
version = "0.1.0"
description = "Reads / Writes credentials from / to disk."
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "3.0.1"
async-fs = "1.1.0"
toml = "0.5.6"
credent_auth_model = { path = "../credent_auth_model", features = ["serde"] }
