[package]
name = "credent_auth_model"
version = "0.1.0"
description = "Data types to represent application credentials."
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.115", optional = true, features = ["derive"] }

[features]
default = ["serde"]
