[package]
name = "credent_cli"
version = "0.1.0"
description = "Reads in credentials from the CLI."
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[lib]
test = false
doctest = false

[dependencies]
rpassword = "5.0.0"
smol = "1.2.4"

credent_model = { version = "0.1.0", path = "../credent_model" }
