[package]
name = "credent_cli"
version = "0.2.1"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Reads in credentials from the CLI."
repository = "https://github.com/azriel91/credent"
documentation = "https://docs.rs/credent/"
readme = "../../README.md"
keywords = ["credentials", "profile"]
license = "MIT OR Apache-2.0"

[lib]
test = false
doctest = false

[dependencies]
rpassword = "5.0.0"
smol = "1.2.4"

credent_cli_model = { version = "0.2.0", path = "../credent_cli_model" }
credent_model = { version = "0.1.0", path = "../credent_model" }
