[package]
name = "credent_cli"
version = "0.4.1"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Reads in credentials from the CLI."
repository = "https://github.com/azriel91/credent"
documentation = "https://docs.rs/credent/"
readme = "../../README.md"
keywords = ["credentials", "profile"]
license = "MIT OR Apache-2.0"

[lib]
test = false
doctest = false

[dependencies]
rpassword = "5.0.0"
smol = { version = "1.2.5", optional = true }
tokio = { version = "1.4.0", optional = true }

credent_cli_model = { version = "0.4.1", path = "../credent_cli_model", default-features = false }
credent_model = { version = "0.4.1", path = "../credent_model" }

[features]
backend-smol = ["credent_cli_model/backend-smol", "smol"]
backend-tokio = ["credent_cli_model/backend-tokio", "tokio", "tokio/io-std", "tokio/io-util", "tokio/rt"]
