[package]
name = "credent_fs"
version = "0.1.0"
description = "Reads / Writes credentials from / to disk."
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[lib]
test = false
doctest = false

[dependencies]
dirs = "3.0.1"
async-fs = "1.5.0"
toml = "0.5.6"
credent_model = { path = "../credent_model", features = ["serde"] }
