[package]
name = "credent_fs"
version = "0.1.0"
description = "Reads / Writes credentials from / to disk."
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[lib]
test = false
doctest = false

[dependencies]
async-fs = "1.5.0"
dirs = "3.0.1"
toml = "0.5.6"

credent_model = { version = "0.1.0", path = "../credent_model", features = ["serde"] }
