[package]
name = "credent_fs"
version = "0.2.1"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Reads / Writes credentials from / to disk."
repository = "https://github.com/azriel91/credent"
documentation = "https://docs.rs/credent/"
readme = "../../README.md"
keywords = ["credentials", "profile"]
license = "MIT OR Apache-2.0"

[lib]
test = false
doctest = false

[dependencies]
async-fs = "1.5.0"
dirs = "3.0.1"
toml = "0.5.6"

credent_fs_model = { version = "0.2.0", path = "../credent_fs_model" }
credent_model = { version = "0.2.1", path = "../credent_model", features = ["serde"] }
