[package]
name = "credent_model"
version = "0.4.1"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Data types to represent application credentials."
repository = "https://github.com/azriel91/credent"
documentation = "https://docs.rs/credent/"
readme = "../../README.md"
keywords = ["credentials", "profile"]
license = "MIT OR Apache-2.0"

[dependencies]
base64 = { version = "0.13.0", optional = true }
serde = { version = "1.0.116", optional = true, features = ["derive"] }

[features]
default = ["serde"]
